fable/test/syntax_error/save_num_val_colon.f
      subroutine sub
      save num, val :
      end
